ftp: Always close data connections when done

Opening data connections is a complex process and can fail in multiple
stages. Instead of requiring the code to close them manually and
throwing assertions when that doesn't work we just clean up after all
jobs automatically.

https://bugzilla.gnome.org/show_bug.cgi?id=711865